stop gap to second page

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Noto Sans', sans-serif;
-  font-family: 'Sofia Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
+  font-family: "Sofia Sans", sans-serif;
   --text-color: #bac6c7;
   --heading-color: #ffffff;
   --darkest: #18191a;
@@ -88,8 +88,8 @@ body {
     &:hover,
     &:focus {
       color: var(--accent);
-      text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000, 1px 1px 2px #000;
-
+      text-shadow: -1px -1px 2px #000, 1px -1px 2px #000, -1px 1px 2px #000,
+        1px 1px 2px #000;
     }
 
     &:visited {
@@ -103,7 +103,7 @@ body {
     flex-wrap: wrap;
     scale: 2;
     padding-inline: 5px;
-    gap: .8rem;
+    gap: 0.8rem;
     z-index: 100;
 
     a:hover {
@@ -115,7 +115,6 @@ body {
 //change colour on splash screen
 .black {
   .contact {
-
     h1,
     a {
       color: #000;
@@ -141,14 +140,15 @@ body {
 }
 
 .section {
-  .nova{
+  .nova {
     text-decoration: none;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+      "Lucida Sans", Arial, sans-serif;
   }
 
   p,
   li {
-    font-family: 'Noto Sans', sans-serif;
+    font-family: "Noto Sans", sans-serif;
     font-weight: 300;
     text-align: justify;
     list-style-type: circle;
@@ -198,7 +198,7 @@ body {
       gap: 2rem;
       margin-top: 9rem;
 
-      .stripe-anim{
+      .stripe-anim {
         position: absolute;
         left: 0;
         top: 8rem;
@@ -206,7 +206,7 @@ body {
         width: 100%;
         transform: skewY(-10deg);
         z-index: 0;
-        opacity: .5;
+        opacity: 0.5;
         background-color: var(--accent);
         border: rgba(255, 255, 255, 0.2) ridge;
         border-width: 5px 0px;
@@ -371,7 +371,7 @@ body {
     }
 
     .heading {
-      font-family: 'Sofia Sans', sans-serif;
+      font-family: "Sofia Sans", sans-serif;
       font-size: 2.5rem;
       font-weight: 700;
       z-index: 0;
@@ -401,7 +401,7 @@ body {
       align-items: center;
       justify-content: space-between;
 
-      >* {
+      > * {
         margin-bottom: 0px;
       }
     }
@@ -440,9 +440,9 @@ body {
   }
 }
 
-@media (max-width:1200px) {
-  .section{
-    .nova{
+@media (max-width: 1200px) {
+  .section {
+    .nova {
       display: none;
     }
   }
@@ -550,7 +550,7 @@ body {
   }
 }
 
-@media (max-width:600px) {
+@media (max-width: 600px) {
   .info-bar {
     overflow: hidden;
 
@@ -594,7 +594,6 @@ body {
       }
 
       .community {
-
         .on1 {
           top: 32rem;
         }
